fix(responsive): change body width to try and fix 50% width on smaller screens

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -9,3 +9,7 @@
 
 // Components
 @import "components/buttons";
+
+body {
+	width: 100vw;
+}
